добавление ручек транскрипта и свойств стратегий
